Merge OpenMrs load and extract components into a single one